<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".IdentityCheck">


    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/rounded_buttons_red"
        android:text="@string/change_user_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/google_pfp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/google_pfp_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintCircleRadius="50dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="291dp"
        android:layout_height="129dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/txt"
        android:text="@string/name_txt"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_pfp" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="302dp"
        android:layout_height="76dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/txt"
        android:gravity="center"
        android:text="@string/email_txt"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <Button
        android:id="@+id/cont_FoodChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/user_confirm"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dev_mode_activate_f_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="196dp"
        android:text="@string/dev_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>