<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".OrderConfirm_v2">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/food_recyclerview"
        android:layout_width="416dp"
        android:layout_height="589dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/to_order_finished"
        android:layout_width="136dp"
        android:layout_height="73dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/txt"
        android:text="@string/purchase"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/total_txt"
        android:layout_width="206dp"
        android:layout_height="39dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="@font/txt"
        android:text="@string/total_cost"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_cost"
        android:layout_width="118dp"
        android:layout_height="65dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/txt"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dollar_sign_orderConfirm"
        android:layout_width="58dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/txt"
        android:gravity="center"
        android:text="@string/dollar_sign"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>